# cerbo

./: .gitignore  Makefile.am  README-mcutils.md  README.md  autogen.sh  cerbo.htm  clean  conf  configure.ac  supo_general.cc  supo_parse.cc  supo_parse.hpp  supo_stats.cc
ascii/: Makefile  asciic.cc
atlast/: .gitignore  Makefile  README.md  atlast.1  atlast.c  atldef.h  core.4th  file.4th  hello.4th  jwf
beancounter/: README  addsyms  bcm  bean-env.sh  beanat  beanat.sql  beancounterrc  config.sql  etrans.py  ftse.py  fxprices.py  hdf5.txt  hi52w.sql  hyh.py  mcacc.sql  patchdb  qat.sql  rectify-bean-stockprices.sql  schema.txt  ui.py  yget.pl
blang/: Makefile  README.md  blang.cc  prog01.bas  prog02.bas  prog03.bas  prog04.bas  prog05.bas  prog06.bas  prog07.bas  prog12.bas  prog14.bas  zx81.md
bled/: .gitignore  Makefile  bled.c
books/: BehaviouralInvesting.txt  BrowneValue.txt  CommomSenseInvesting.txt  DhandhoInvestor.txt  Genius.txt  InvestmentChecklist.txt  Just.txt  MagicFormula.txt  Margin.txt  OnlyThreeQuestions.txt  Penman.txt  ProblemWatanabe.txt  Secret.txt  Sideways.txt  YouCallTheShots.txt  aggressive.txt  cundill.txt  greenwald.txt  iwatw.docx  work-play.txt
c/: Makefile  README.md  README.txt  bround.c  pipes.c  pss.c
carali/: .gitignore  Makefile  README.txt  access-example.rkt  access.rkt  cache.rkt  carali.scrbl  csvmc.rkt  datetime-test.rkt  datetime.rkt  epics.rkt  formatting.rkt  functional.rkt  hashes.rkt  http.rkt  info.rkt  lisp.rkt  lists.rkt  main.rkt  maths-test.rkt  maths.rkt  misc-test.rkt  misc.rkt  money.rkt  sharelock.rkt
cdargs-1.35/: .gitignore  Makefile.am  configure.ac
cdargs-1.35/m4/: Makefile.am
cdargs-1.35/src/: Makefile.am
cde/: README.md
chicken/: README.md
chili/: chili.setup
cinelerra/: README.md  build.sh  cinelerra-dependencies.sh  clone.sh
cobol/: MSYS2  Makefile  README  accept.cbl  cobsys.cob  len.cbl  rurl.cbl  shell.cob
collatz/: Makefile  collatz.cc
dsp/: .gitignore  Makefile  README.md  brown.c  choco.c  db05-117.f90  depeche-mode.ipynb  dsp.ipynb  dsp.p6  fir.jl  hz440.c  mkwavs  pink.cc  plot.gnu  rcfilter.c  sampling.ipynb  white.c
ernst-desktop/: ernst.desktop
forth/: .gitignore  Makefile  README.md  again.4th  builds.4th  embed.4th  forth.c  forth.cc  if.4th  scanner.c  test.4th
fortran/: .gitignore  Makefile  Makefile.orig  csv.f90  ex01.f90  ex02.f90  ex03.f90  hdf5ex.f90  hdf5ex.txt  index.f90  linreg.f90  maff.f90  median.f90  quant.f90  quant90.f90  recordjar.f90  tests.xls  y2nc.f90
gimp/: README
gnpoc/: .gitignore  Makefile  README.txt  gnpoc.f90
green/: .gitignore  Makefile  Makefile.am  README.md  green.c  green.cc
guile/: gums-init.scm  scratch.scm
h5mc/: TODO
h5mc/src/: .gitignore  Makefile.am  common.cc  common.hpp  common5.cc  common5.h  daycls.f90  h5new.cc  h5query.cc  h5rank.cc  h5sprep.cc  hi52w.f90  qry01.cc  shsl.cc
haskell/: scanf.ipynb
icons/: drracket16.xpm  drracket32.xpm  firefox16.xpm  treepad16.xpm  treepad32.xpm
keys/: .gitignore  Makefile.am  README.md  keys.cc
ledger/: README.md
maff/: Makefile.ori
man/: .gitignore
mcacc/: .gitignore  Makefile.am  README.md  args.cc  cgt.cc  cgt.h  common.cc  common.h  common.hpp  dec.cc  dec.h  dec.hpp  epics.cc  epics.h  epics.hpp  etb.cc  etb.h  etran.cc  etran.h  etran.hpp  etrans-aug.cc  etrans-aug.h  gaap.cc  gaap.h  inputs.cc  inputs.h  inputs.hpp  mcacc.cc  nacc.hpp  oven.cc  oven.h  oven.hpp  parser.yy  pgposts.cc  pgposts.h  pgposts.hpp  posts.cc  posts.h  posts.hpp  reports.h  (+18 more)
mcacc/scripts/: Makefile.am  mcacc-env.sh  mcacc-reports.sh
mcacc/src/: Makefile.am  args.cc  cgt.cc  cgt.hpp  common.cc  dec.cc  dec.hpp  epics.cc  etb.cc  etrans-aug.cc  etrans-aug.hpp  gaap.cc  inputs.cc  mcacc.cc  oven.cc  pgposts.cc  pgposts.hpp  reusable.cc  reusable.hpp  show.cc  tests.cc  types.cc  types.hpp  uprice.cc  wiegley.cc  wiegley.hpp  yproc.cc
menu/: Makefile.am  menu.cc  mnu
mtcelledit/: README  README-ubuntu
neoleo/: .gitignore  PKGBUILD.tmpl  README  makeit.py
netcdf/: .gitignore  Makefile  cdf.py  cdf90.f90  echo.jl
nim/: .gitignore  closures.nim  shortcircuit.nim
ocaml/: hello.ml
paunch/: paunch.bat  paunch.lpi  paunch.lpr  paunch.lps
perl6/: README.md  Shlex.pm6  data.txt  io.pl6  piping.pl6  query.pm6
python/: converter.py  curse.py  pspy.py  pyftpd.py  threads.py
rs6/: rs6.f90  rs6.py
rust/: threads.rs
sc/: README  crib  runit  scrc
scheme/: CONTENTS  README  examples.scm  mean.scm  mymacros.scm  scratch.scm
schorre/: .gitignore  README.md  asm.txt  fig3.pl6  fig3.scm  logo
sharelock/: .gitignore  Makefile  README  groupmedian.py  nan.f90  percentiles.py  report01.c  sesh.py  sharelock.scm  trans.py
shlex/: .gitignore  Makefile.am  input.txt  main.cc  shlex.1  shlex.cc  shlex.cpp  sumby.cc  tsv.cc
shlex/bak/: shlex.cpp.1
splut/: .gitignore  Makefile.am  splut.cc
ssa/: .gitignore  BUGS  Makefile  NEWS  PREREQUISITES  README  TODO  TODO.txt  chketb.py  commands.c  commands.h  csv.c  csv.h  curly.c  curly.h  curly.txt  data.c  data.h  datalog.py  epics.c  epics.h  financials.c  financials.h  globals.c  gofic.c  htm.c  htm.h  inodes.c  inodes.h  logging.c  logging.h  ofx.c  ofx.h  parser.c  parser.h  portfolios.c  portfolios.h  postings.c  prolog.c  prolog.h  (+9 more)
ssah/: .gitignore  Main.hs  Makefile  README.md  Scratch.hs  Ssah.hs  TODO.txt  bar.hs  cabal.sandbox.config  hssa.cfg  hssa.htm  hssarc  moan.hs  multi.hs  s  ssah.cabal  ssah.cabal.save0  ssah.cabal.save2  ssah.cabal.save3  ssah.hs
stats/: .gitignore  Makefile.am  Makefile.am.ori  main.cc  mcstats.h  parse.cc  stats.c  stats.cc  stats.f90  stats.h  stats.hpp  tests.cc
stats-dunno/: Makefile  README  help.txt  mcstats.c  stats.lex
stats-src/: main.cc  parse.hpp
stats/html/: index.html
supo/: .gitignore  Makefile.am  Makefile.am.ori  stats.cc  supo.cc  supo.h  supo.hpp  supo_general.cc  supo_general.hpp  supo_parse.cc  supo_parse.hpp  supo_stats.cc  supo_stats.hpp
text2pdf/: .gitignore  Makefile  Makefile.am  README  text2pdf.cc
vim/: README  corporation.vim
vivocyg/: vivocyg.ppx  (+1 more)
(+595 files in other folders)
