AM_CXXFLAGS = -std=gnu++14

AUTOMAKE_OPTIONS = subdir-objects
#AUTOMAKE_OPTIONS = std-options
lib_LTLIBRARIES = libsupo.la
libsupo_la_SOURCES = supo.cc supo_stats.cc

#bin_PROGRAMS = menu

#menu_LDADD = libsupo.la
#menu_SOURCES = menu/menu.cc

SUBDIRS = green text2pdf shlex stats mcacc/src  h5mc/src menu
