AM_CXXFLAGS = -std=gnu++14 

AUTOMAKE_OPTIONS = subdir-objects
#AUTOMAKE_OPTIONS = std-options
lib_LTLIBRARIES = libsupo.la
libsupo_la_SOURCES = supo.cc supo_general.cc supo_parse.cc supo_stats.cc



SUBDIRS = . beancounter/scripts green text2pdf shlex \
	  mcacc/scripts mcacc/src  \
	  h5mc/src h5mc/scripts menu \
	  splut stats

