AC_PREREQ([2.69])
AC_INIT([cdargs], [1.35], [alt.mcarter@gmail.com])
AC_CONFIG_SRCDIR([src/cdargs.cc])
#AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CXX
#AC_STDC_HEADERS

dnl AC_CHECK_CURSES
dnl if test "$has_curses" = "false" ; then
dnl  AC_MSG_ERROR([Fatal error: couldn't find ncurses/curses.])
dnl fi

dnl MP_WITH_CURSES
dnl if test "x$CURSES_LIB" = "x" ; then
dnl   AC_MSG_ERROR([Fatal error: couldn't find ncurses/curses.])
dnl fi
dnl AC_SUBST(CURSES_LIB)

AC_OUTPUT(Makefile src/Makefile )
#AC_OUTPUT(contrib/Makefile doc/Makefile m4/Makefile cdargs.spec)
