AM_CXXFLAGS = -std=gnu++14 
bin_PROGRAMS = shlex 
shlex_SOURCES = main.cc shlex.cc
#shlex_LDADD = libshlex.a -lboost_program_options
#lib_LIBRARIES = libshlex.a

#libshlex_a_SOURCES = shlex.cc


#BUILT_SOURCES = shlex.yy.c shlex.tab.c
#BUILT_SOURCES = shlex.pch
#CLEANFILES = $(BUILT_SOURCES)

#shlex.pch : shlex.hpp
#	$(CXX) -o $@ $<
